2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* oldrecover-src/extract_list.c: add_glob(): replace strappend() usage
	  with g_strconcat(); fix regex

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* oldrecover-src/amrecover.c: get_line(): replace strappend() usage with
	  a GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/security-util.c: cherck_user_ruserok(): replace strappend()
	  usage with a GPtrArray

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: val_t_display_strs(): replace several usages of
	  strappend() with GPtrArrays

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* client-src/selfcheck.c: check_disk(): replace strappend() usages with
	  a GPtrArray

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* client-src/sendbackup-gnutar.c: start_backup(): replace strappend()
	  usage with a GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* client-src/getfsent.c: get_fstab_nextentry(): replace strappend()
	  usage with a temporary variable and g_strjoin()

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/alloc.c, common-src/amanda.h: goodbye vstrextend() and
	  internal_vstralloc()

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/tapefile.c: list_new_tapes(): replace vstrextend() usage
	  with a GString; rework exit paths

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/dumper.c: delay_one_dump(): replace vstrextend() with a
	  GPtrArray/GString combination; create one local variable

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/dumper.c: startup_dump(): replace vstrextend() with a
	  GString; fix boolean usage

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/driverio.c: dumper_cmd(): replace vstrextend() usage with a
	  GPtrArray, and replace some g_strjoin() usages with g_strdup_printf()

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>