@@ -1,4 +1,8 @@
 2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
+	* oldrecover-src/extract_list.c: delete_glob(): replace strappend()
+	  usage with g_strconcat(); fix regex
+
+2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
 	* oldrecover-src/extract_list.c: add_glob(): replace strappend() usage
 	  with g_strconcat(); fix regex
 
